--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
 
   %body
-    %nav.navbar.navbar-inverse{role: "navigation"}
+    %nav.navbar.navbar-default{role: "navigation"}
       .container-fluid
         .navbar-header
           %button.navbar-toggle{"data-target" => "#navbar-collapse-1", "data-toggle" => "collapse", type: "button"}
@@ -25,7 +25,7 @@
             %span.icon-bar
             %span.icon-bar
           %a.navbar-brand{href: root_path}
-            %span.glyphicon.glyphicon-star
+            %span.glyphicon.glyphicon-tower
             = t(".brand")
         = render "layouts/navbar"
 
