--- a/app/views/master/users/show.html.haml
+++ b/app/views/master/users/show.html.haml
@@ -4,7 +4,7 @@
   %h3.sub-title.inline
     User : #{@user.email}
     %span
-      = link_to edit_user_path(@user), class: 'btn btn-warning', title: "Edit User" do
+      = link_to edit_user_path(@user), class: 'btn btn-warning btn-xs', title: "Edit User" do
         %span.glyphicon.glyphicon-edit
 
 .col-sm-12
