Adds support for Sorty and basic searching. #10.

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -27,3 +27,7 @@ td.action-button {
 .no-margin-bottom {
   margin-bottom: 0em !important;
 }
+
+form.form-inline.inline-search-form {
+  display: inline;
+}
