Adds support for Districts. #4

--- a/app/views/layouts/master/_navbar.html.haml
+++ b/app/views/layouts/master/_navbar.html.haml
@@ -32,6 +32,10 @@
             = link_to states_path do
               %span.glyphicon.glyphicon-globe
               States
+          %li
+            = link_to districts_path do
+              %span.glyphicon.glyphicon-fullscreen
+              Districts
       -# User Menu
       %li.dropdown
         %a.dropdown-toggle{"data-toggle" => "dropdown", href: "#"}
