--- a/app/views/master/states/show.html.haml
+++ b/app/views/master/states/show.html.haml
@@ -1,21 +1,36 @@
-- title @state.name, false
+- title "State : #{@state.name}", false
 
 .page-header
   %h3.sub-title.inline
-    = @state.name
+    State : #{@state.name}
     %span
       = link_to edit_state_path(@state), class: 'btn btn-warning btn-xs', title: "Edit State" do
         %span.glyphicon.glyphicon-edit
-
-%table.table.table-hover.table-striped.table-condensed
-  %tbody
-    %tr
-      %th= State.human_attribute_name(:name)
-      %td= @state.name
-      %th= State.human_attribute_name(:abbr)
-      %td= @state.abbr
-    %tr
-      %th= State.human_attribute_name(:created_at)
-      %td= l(@state.created_at, format: :short)
-      %th= State.human_attribute_name(:updated_at)
-      %td= l(@state.updated_at, format: :short)
+.row
+  .col-lg-4
+    %h5.page-header General Information
+    %table.table.table-hover.table-striped.table-condensed
+      %tbody
+        %tr
+          %th= State.human_attribute_name(:name)
+          %td= @state.name
+        %tr
+          %th= State.human_attribute_name(:abbr)
+          %td= @state.abbr
+        %tr
+          %th= State.human_attribute_name(:created_at)
+          %td= l(@state.created_at, format: :short)
+        %tr
+          %th= State.human_attribute_name(:updated_at)
+          %td= l(@state.updated_at, format: :short)
+  .col-lg-8
+    %h5.page-header Districts
+    = paginate @districts
+    %table.table.table-striped.table-hover.table-condensed
+      %thead
+        %tr
+          %th= District.human_attribute_name(:name)
+      %tbody
+        - @districts.each do |district|
+          %tr
+            %td= link_to district.name, district
