--- a/app/views/layouts/master/_navbar.html.haml
+++ b/app/views/layouts/master/_navbar.html.haml
@@ -36,6 +36,10 @@
             = link_to districts_path do
               %span.glyphicon.glyphicon-fullscreen
               Districts
+          %li
+            = link_to schools_path do
+              %span.glyphicon.glyphicon-bell
+              Schools
       -# User Menu
       %li.dropdown
         %a.dropdown-toggle{"data-toggle" => "dropdown", href: "#"}
