Scaffolds out the Teacher resource. #6.

--- a/app/views/layouts/master/_navbar.html.haml
+++ b/app/views/layouts/master/_navbar.html.haml
@@ -40,6 +40,10 @@
             = link_to schools_path do
               %span.glyphicon.glyphicon-bell
               Schools
+          %li
+            = link_to teachers_path do
+              %span.glyphicon.glyphicon-briefcase
+              Teachers
       -# User Menu
       %li.dropdown
         %a.dropdown-toggle{"data-toggle" => "dropdown", href: "#"}
