--- a/app/views/layouts/master/_navbar.html.haml
+++ b/app/views/layouts/master/_navbar.html.haml
@@ -2,7 +2,8 @@
   %ul.nav.navbar-nav
     - if user_signed_in?
       %li
-        = active_link_to '#', active: ["campaigns"] do
+      %li{class: is_active_link?(campaigns_path, :inclusive) ? 'active' : nil}
+        = active_link_to campaigns_path, active: ["master/campaigns"] do
           %span.glyphicon.glyphicon-fire
           Campaigns
       %li
