--- a/app/views/master/campaigns/show.html.haml
+++ b/app/views/master/campaigns/show.html.haml
@@ -52,4 +52,19 @@
           %th= Campaign.human_attribute_name(:updated_at)
           %td= l(@campaign.updated_at, format: :short)
   .col-lg-8
-    %h5.page-header Contributors / Contributions
+    %h5.page-header Contributions
+    = paginate @contributions
+    %table.table.table-striped.table-hover.table-condensed
+      %thead
+        %tr
+          %th= Contribution.human_attribute_name(:pledge_id)
+          %th= Contribution.human_attribute_name(:pledged_at)
+          %th= Contribution.human_attribute_name(:contributor)
+          %th= Contribution.human_attribute_name(:amount)
+      %tbody
+        - @contributions.each do |contribution|
+          %tr
+            %td= link_to contribution.pledge_id, contribution
+            %td= l(contribution.pledged_at, format: :short)
+            %td= link_to contribution.contributor.name, contribution.contributor
+            %td= humanized_money_with_symbol(contribution.amount.dollars, no_cents_if_whole: false)
