--- a/app/views/master/contributors/show.html.haml
+++ b/app/views/master/contributors/show.html.haml
@@ -25,3 +25,18 @@
           %td= l(@contributor.updated_at, format: :short)
   .col-lg-8
     %h5.page-header Contributions
+    = paginate @contributions
+    %table.table.table-striped.table-hover.table-condensed
+      %thead
+        %tr
+          %th= Contribution.human_attribute_name(:pledge_id)
+          %th= Contribution.human_attribute_name(:pledged_at)
+          %th= Contribution.human_attribute_name(:campaign)
+          %th= Contribution.human_attribute_name(:amount)
+      %tbody
+        - @contributions.each do |contribution|
+          %tr
+            %td= link_to contribution.pledge_id, contribution
+            %td= l(contribution.pledged_at, format: :short)
+            %td= link_to contribution.campaign.name, contribution.campaign
+            %td= humanized_money_with_symbol(contribution.amount.dollars, no_cents_if_whole: false)
