--- a/app/views/master/contributions/_form.html.haml
+++ b/app/views/master/contributions/_form.html.haml
@@ -2,7 +2,7 @@
   = f.error_notification
 
   = f.input :pledge_id, as: :string
-  = f.input :pledged_at
+  = f.input :pledged_at, as: :string, input_html: { class: 'datepicker' }
   = f.association :contributor, include_blank: false
   = f.association :campaign, include_blank: false
   = f.input :amount_dollars, required: true do
