--- a/app/views/master/schools/show.html.haml
+++ b/app/views/master/schools/show.html.haml
@@ -40,3 +40,5 @@
           %tr
             %td= link_to teacher.last_name, teacher
             %td= teacher.first_name
+
+TODO: school wide campaigns
