--- a/app/views/master/campaigns/_form.html.haml
+++ b/app/views/master/campaigns/_form.html.haml
@@ -5,7 +5,7 @@
   = f.association :state, include_blank: false
   = f.association :district, include_blank: false
   = f.association :school, include_blank: false
-  = f.association :teacher, include_blank: false
+  /= f.association :teacher, include_blank: false
   = f.input :active, as: :select, include_blank: false
 
   .form-group
