--- a/app/views/master/teachers/show.html.haml
+++ b/app/views/master/teachers/show.html.haml
@@ -27,3 +27,22 @@
         %tr
           %th= Teacher.human_attribute_name(:updated_at)
           %td= l(@teacher.updated_at, format: :short)
+  .col-lg-8
+    %h5.page-header Campaigns
+    = paginate @campaigns
+    %table.table.table-striped.table-hover.table-condensed
+      %thead
+        %tr
+          %th= Campaign.human_attribute_name(:name)
+          %th= Campaign.human_attribute_name(:school)
+          %th= Campaign.human_attribute_name(:school_wide)
+          %th= Campaign.human_attribute_name(:active)
+      %tbody
+        - @campaigns.each do |campaign|
+          %tr
+            %td= link_to campaign.name, campaign
+            %td= link_to campaign.school.name, campaign.school
+            %td= campaign.school_wide? ? "Yes" : "No"
+            %td= campaign.active? ? "Yes" : "No"
+
+TODO: contributions
