--- a/app/views/master/teachers/show.html.haml
+++ b/app/views/master/teachers/show.html.haml
@@ -28,21 +28,47 @@
           %th= Teacher.human_attribute_name(:updated_at)
           %td= l(@teacher.updated_at, format: :short)
   .col-lg-8
-    %h5.page-header Campaigns
-    = paginate @campaigns
-    %table.table.table-striped.table-hover.table-condensed
-      %thead
-        %tr
-          %th= Campaign.human_attribute_name(:name)
-          %th= Campaign.human_attribute_name(:school)
-          %th= Campaign.human_attribute_name(:school_wide)
-          %th= Campaign.human_attribute_name(:active)
-      %tbody
-        - @campaigns.each do |campaign|
-          %tr
-            %td= link_to campaign.name, campaign
-            %td= link_to campaign.school.name, campaign.school
-            %td= campaign.school_wide? ? "Yes" : "No"
-            %td= campaign.active? ? "Yes" : "No"
-
-TODO: contributions
+    %ul.nav.nav-tabs
+      %li.active
+        = link_to '#campaigns', data: {toggle: 'tab'} do
+          %span.glyphicon.glyphicon-fire
+          Teacher Based Campaigns
+      %li
+        = link_to '#contributions', data: {toggle: 'tab'} do
+          %span.glyphicon.glyphicon-briefcase
+          Contributions
+    .tab-content
+      #campaigns.tab-pane.active
+        %h5.page-header Teacher Based Campaigns
+        = paginate @campaigns, param_name: "campaigns_page", params: { anchor: "campaigns" }
+        %table.table.table-striped.table-hover.table-condensed
+          %thead
+            %tr
+              %th= Campaign.human_attribute_name(:name)
+              %th= Campaign.human_attribute_name(:school)
+              %th= Campaign.human_attribute_name(:school_wide)
+              %th= Campaign.human_attribute_name(:active)
+          %tbody
+            - @campaigns.each do |campaign|
+              %tr
+                %td= link_to campaign.name, campaign
+                %td= link_to campaign.school.name, campaign.school
+                %td= campaign.school_wide? ? "Yes" : "No"
+                %td= campaign.active? ? "Yes" : "No"
+      #contributions.tab-pane
+        %h5.page-header Contributions
+        = paginate @contributions, param_name: "contributions_page", params: { anchor: "contributions" }
+        %table.table.table-striped.table-hover.table-condensed
+          %thead
+            %tr
+              %th= Contribution.human_attribute_name(:pledge_id)
+              %th= Contribution.human_attribute_name(:amount)
+              %th= Contribution.human_attribute_name(:contributor)
+              %th= Contribution.human_attribute_name(:pledged_at)
+          %tbody
+            - @contributions.each do |contribution|
+              %tr
+                %td= link_to contribution.pledge_id, contribution
+                %td= humanized_money_with_symbol(contribution.amount.dollars, no_cents_if_whole: false)
+                %td= link_to contribution.contributor.name, contribution.contributor
+                %td= l(contribution.pledged_at, format: :short)
