Improves the rake task for faking population data. #16.

--- a/app/views/master/teachers/index.html.haml
+++ b/app/views/master/teachers/index.html.haml
@@ -12,7 +12,7 @@
     %tr
       %th= sorty "last_name", Teacher.human_attribute_name(:last_name), true
       %th= sorty "first_name", Teacher.human_attribute_name(:first_name)
-      %th= sorty "school", Teacher.human_attribute_name(:abbr)
+      %th= sorty "school", Teacher.human_attribute_name(:school)
       %th= sorty "created_at", Teacher.human_attribute_name(:created_at)
       %th= sorty "updated_at", Teacher.human_attribute_name(:updated_at)
       %th
