--- a/app/views/layouts/master/_navbar.html.haml
+++ b/app/views/layouts/master/_navbar.html.haml
@@ -2,7 +2,7 @@
   %ul.nav.navbar-nav
     - if user_signed_in?
       %li
-      %li{class: (is_active_link?(campaigns_path, :inclusive) || is_active_link?(master_root_path, :inclusive)) ? 'active' : nil}
+      %li{class: (is_active_link?(campaigns_path, :inclusive)) ? 'active' : nil}
         = active_link_to campaigns_path, active: ["master/campaigns"] do
           %span.glyphicon.glyphicon-fire
           Campaigns
