--- a/app/views/master/campaigns/index.html.haml
+++ b/app/views/master/campaigns/index.html.haml
@@ -15,10 +15,9 @@
       %th= sorty "district", Campaign.human_attribute_name(:district)
       %th= sorty "school", Campaign.human_attribute_name(:school)
       %th= Campaign.human_attribute_name(:campaignable)
+      %th= sorty "goal_amount_cents", Campaign.human_attribute_name(:goal_amount)
       %th= sorty "school_wide", Campaign.human_attribute_name(:school_wide)
       %th= sorty "active", Campaign.human_attribute_name(:active)
-      %th= sorty "created_at", Campaign.human_attribute_name(:created_at)
-      %th= sorty "updated_at", Campaign.human_attribute_name(:updated_at)
       %th
       %th
   %tbody
@@ -45,10 +44,9 @@
             = link_to campaign.campaignable.to_s, campaign.campaignable
           - else
             N/A
+        %td= link_to(humanized_money_with_symbol(campaign.goal_amount.dollars, no_cents_if_whole: false), campaign)
         %td= campaign.school_wide? ? 'Yes' : 'No'
         %td= campaign.active? ? "Yes" : "No"
-        %td= l(campaign.created_at, format: :short)
-        %td= l(campaign.updated_at, format: :short)
         %td
           = link_to edit_campaign_path(campaign), class: 'btn btn-warning btn-xs', title: 'Edit Campaign' do
             %span.glyphicon.glyphicon-edit
