--- a/app/views/master/contributions/index.html.haml
+++ b/app/views/master/contributions/index.html.haml
@@ -10,7 +10,7 @@
 %table.table.table-striped.table-hover.table-condensed
   %thead
     %tr
-      %th= sorty "pledge_id", Contribution.human_attribute_name(:pledge_id), true
+      %th= sorty "pledge_id", Contribution.human_attribute_name(:pledge_id), {default: true}
       %th= sorty "pledged_at", Contribution.human_attribute_name(:pledged_at)
       %th= sorty "contributor", Contribution.human_attribute_name(:contributor)
       %th= sorty "campaign", Contribution.human_attribute_name(:campaign)
