--- a/app/views/master/contributors/index.html.haml
+++ b/app/views/master/contributors/index.html.haml
@@ -10,7 +10,7 @@
 %table.table.table-striped.table-hover.table-condensed
   %thead
     %tr
-      %th= sorty "name", Contributor.human_attribute_name(:name), true
+      %th= sorty "name", Contributor.human_attribute_name(:name), {default: true}
       %th= sorty "email", Contributor.human_attribute_name(:email)
       %th= sorty "created_at", Contributor.human_attribute_name(:created_at)
       %th= sorty "updated_at", Contributor.human_attribute_name(:updated_at)
