--- a/app/views/master/districts/index.html.haml
+++ b/app/views/master/districts/index.html.haml
@@ -10,7 +10,7 @@
 %table.table.table-striped.table-hover.table-condensed
   %thead
     %tr
-      %th= sorty "name", District.human_attribute_name(:name), true
+      %th= sorty "name", District.human_attribute_name(:name), {default: true}
       %th= sorty "state", District.human_attribute_name(:state)
       %th= sorty "created_at", District.human_attribute_name(:created_at)
       %th= sorty "updated_at", District.human_attribute_name(:updated_at)
