--- a/app/views/master/states/index.html.haml
+++ b/app/views/master/states/index.html.haml
@@ -10,7 +10,7 @@
 %table.table.table-striped.table-hover.table-condensed
   %thead
     %tr
-      %th= sorty "name", State.human_attribute_name(:name), true
+      %th= sorty "name", State.human_attribute_name(:name), {default: true}
       %th= sorty "abbr", State.human_attribute_name(:abbr)
       %th= sorty "created_at", State.human_attribute_name(:created_at)
       %th= sorty "updated_at", State.human_attribute_name(:updated_at)
