Adds the discreet New Campaign button to the front end. #18.

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -4,3 +4,8 @@
       = active_link_to root_path, active: ["public"] do
         %span.glyphicon.glyphicon-home
         Home
+
+  %ul.nav.navbar-nav.navbar-right
+    %li
+      = link_to '#', title: 'New Campaign' do
+        %span.glyphicon.glyphicon-plus
