--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,6 +1,6 @@
 #navbar-collapse-1.collapse.navbar-collapse
   %ul.nav.navbar-nav
-    %li{class: is_active_link?(root_path, :inclusive) ? 'active' : nil}
+    %li{class: is_active_link?(root_path, :exclusive) ? 'active' : nil}
       = active_link_to root_path, active: ["public"] do
         %span.glyphicon.glyphicon-home
         Home
