--- a/app/views/public/index.html.haml
+++ b/app/views/public/index.html.haml
@@ -3,14 +3,9 @@
 .row
   .col-lg-8.col-lg-offset-2
     %h1.page-header Campaign Search
-    -# Create a new one, unless it already exists
-    = simple_form_for :search, url: '#', method: :get, wrapper: :modal do |f|
-      = f.input :state, as: :select, collection: State.ordered.pluck(:name, :abbr), include_blank: false
-      = f.input :district, as: :select, collection: District.ordered, include_blank: false
-      = f.input :school_wide, as: :select, collection: [['School Based', true], ['Teacher Based', false]], include_blank: false, label: 'Kind'
-      = f.input :school, as: :select, collection: School.ordered, include_blank: false
-      = f.input :teacher, as: :select, collection: Teacher.ordered.map { |k| [k.full_name, k.id] }, include_blank: false
-      = f.input :name, as: :string
-      - if params[:search].present?
-        = link_to '#', class: 'btn btn-danger', title: 'Clear Filter' do
-          %span.glyphicon.glyphicon-remove
+    -# Search for existing campaigns
+    = simple_form_for :search, url: '#', method: :get, wrapper: :nested, html: { id: 'campaign_search_form' } do |f|
+      = f.input :state, as: :select, collection: State.ordered.pluck(:name, :abbr), include_blank: 'Select a State', input_html: { class: 'col-lg-offset-1', data: {url: api_v1_districts_url}}, label: false
+      = f.input :district, as: :select, collection: [], include_blank: 'Select a District', disabled: true, label: false, input_html: { class: 'col-lg-offset-1', data: {url: api_v1_district_schools_url(district_id: ':district_id')} }
+      = f.input :school, as: :select, collection: [], include_blank: 'Select a School', disabled: true, label: false, input_html: { class: 'col-lg-offset-1', data: {url: api_v1_district_school_campaigns_url(district_id: ':district_id', school_id: ':school_id')} }
+      = f.input :campaignable, as: :select, collection: [], include_blank: false, label: false, disabled: true, input_html: { class: 'col-lg-offset-1' }
