Stubs out the campaign reports and contributions pages. #27.

--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -1,3 +1,7 @@
 - title @campaign.name
 
 This is the campaign landing page
+
+%ul
+  %li= link_to 'Reports', reports_campaign_path(@campaign.to_param)
+  %li= link_to 'Contributions', contributions_campaign_path(@campaign.to_param)
