--- a/app/views/layouts/master/_navbar.html.haml
+++ b/app/views/layouts/master/_navbar.html.haml
@@ -26,7 +26,7 @@
       %li.dropdown
         %a.dropdown-toggle{"data-toggle" => "dropdown", href: "#"}
           %span.glyphicon.glyphicon-cog
-          Configuration
+          Settings
           %b.caret
         %ul.dropdown-menu
           %li
@@ -47,9 +47,14 @@
               Teachers
           %li.divider
           %li
+            = link_to products_path do
+              %span.glyphicon.glyphicon-gift
+              Products
+          %li
             = link_to users_path do
               %span.glyphicon.glyphicon-user
               Users
+          %li.divider
           %li
             = link_to tos_path do
               %span.glyphicon.glyphicon-eye-close
